# x-mcp

./: .gitignore  README.md  pyproject.toml
src/x_mcp/: server.py
